AssetEdit - database name less restricted, allows dots, etc.

--- a/ui/admin/templates/assetEdit.html
+++ b/ui/admin/templates/assetEdit.html
@@ -112,7 +112,7 @@ $var cssfiles:
                     <tr>
                         <td> DB Name </td>
                         <td>
-                        <input validate_as="identifier" id="txtDbName" style="width: 200px;" type="text" maxlength="1024" name="txtDbName" />
+                        <input validate_as="username" id="txtDbName" style="width: 200px;" type="text" maxlength="1024" name="txtDbName" />
                         </td>
                     </tr>
                     <tr>
