#248 - Tasks, Assets and Users are now searchable by Tag, Tags appear on the list pages.

--- a/ui/admin/templates/assetEdit.html
+++ b/ui/admin/templates/assetEdit.html
@@ -67,6 +67,7 @@ $var cssfiles:
                 <th class="sortable" width="100px"> Status </th>
                 <th class="sortable" width="50px"> Address </th>
                 <th class="sortable" width="125px"> Credential </th>
+                <th width="1px"></th>
             </tr>
         </thead>
         <tbody id="assets"></tbody>
