--- a/ui/admin/templates/userEdit.html
+++ b/ui/admin/templates/userEdit.html
@@ -53,6 +53,7 @@ $var cssfiles:
                 <th class="sortable">Login</th>
                 <th class="sortable">Role</th>
                 <th class="sortable">Last Login</th>
+                <th width="1px"></th>
             </tr>
         </thead>
         <tbody id="users"></tbody>
