--- a/ui/admin/templates/systemStatus.html
+++ b/ui/admin/templates/systemStatus.html
@@ -81,7 +81,8 @@ $var cssfiles:
 						<th align="left"> Subject </th>
 						<th align="left"> Status </th>
 						<th align="left"> Error </th>
-						<th align="left"> Timing </th>
+                        <th align="left" width="10px">Retries</th>
+                        <th align="left" width="140px"> Timing </th>
 					</tr>
 				</thead>
 				<tbody id="messages"></tbody>
