Fixed background of About dialog

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -98,7 +98,7 @@ $:content
             <br />
             <!-- dynamic divs below here -->
             <!-- This is the popup "about" dialog. -->
-            <div id="about_dialog" title="About Cato" class="ui-state-highlight">
+            <div id="about_dialog" title="About Cato">
                 <p>
                     <span class="ui-icon ui-icon-info" style="float: left; margin: 0 7px 0px 0;"></span>
                     <span id="app_name">Cloud Sidekick Cato</span>
