Settings page improved

--- a/ui/admin/templates/settings.html
+++ b/ui/admin/templates/settings.html
@@ -7,9 +7,12 @@ $var cssfiles:
 	#content {
 		padding: 20px 10px 10px 10px;
 	}
-	#left_panel {
-		padding: 20px 0px 0px 0px;
-	}
+    #left_panel {
+        padding: 20px 0px 0px 0px;
+    }
+    .detail_panel {
+        margin-bottom: 20px;
+    }
 </style>
 <div id="content">
     <form autocomplete="off">
@@ -105,7 +108,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="security" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="security" class="save_btn">Save</span></td>
                     </tr>
                 </table>
             </div>
@@ -139,7 +142,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="poller" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="poller" class="save_btn">Save</span></td>
                     </tr>
                 </table>
             </div>
@@ -187,7 +190,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="scheduler" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="scheduler" class="save_btn">Save</span></td>
                 </table>
             </div>
         </div>
@@ -282,7 +285,7 @@ $var cssfiles:
                         <td class="row_odd">                        <textarea id="AdminEmail" name="AdminEmail" class="usertextbox"></textarea></td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="messenger" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="messenger" class="save_btn">Save</span></td>
                     </tr>
 
                 </table>
@@ -291,7 +294,7 @@ $var cssfiles:
         <div id="div_maestro_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Maestro General</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -301,8 +304,8 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td width="150px" class="row_odd"> Menu Canvas </td>
-                        <td class="row_odd">
+                        <td width="150px" class="row_even"> Menu Canvas </td>
+                        <td class="row_even">
                         <input type="text" id="MenuCanvas" name="MenuCanvas" class="usertextbox" />
                         </td>
                     </tr>
@@ -313,7 +316,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="maestro" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="maestro" class="save_btn">Save</span></td>
                     </tr>
                 </table>
             </div>
@@ -321,7 +324,7 @@ $var cssfiles:
         <div id="div_marshaller_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Marshaller Settings</span>
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Marshaller</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -347,7 +350,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="marshaller" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_even"><span module="marshaller" class="save_btn">Save</span></td>
                     </tr>
                 </table>
             </div>
@@ -355,7 +358,7 @@ $var cssfiles:
         <div id="div_maestroscheduler_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/sched_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Scheduler Settings</span>
+                    <img src="static/images/icons/sched_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Scheduler</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -388,7 +391,7 @@ $var cssfiles:
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" style="text-align: center;" height="25" class="row_odd"><span module="maestroscheduler" class="save_btn">Save</span></td>
+                        <td colspan="2" style="text-align: center; padding: 4px 0px 4px 0px;" class="row_odd"><span module="maestroscheduler" class="save_btn">Save</span></td>
                 </table>
             </div>
         </div>
