--- a/ui/admin/static/style/main.css
+++ b/ui/admin/static/style/main.css
@@ -45,7 +45,7 @@ body {
 	padding-bottom: 20px; /* to accomodate the fixed footer */
 }
 
-#content table {
+#content > table {
 	margin-top: 6px;
 }
 
@@ -289,14 +289,14 @@ th.col_header {
 	border: 1px solid #dddddd;
 	background: #B0B579;
 	font-weight: bold;
-	color: #dddddd;
+	color: #231F20;
 	padding-left: 4px;
 	padding-right: 4px;
 }
 td.row {
 	border: 1px solid #dddddd;
 	background: #fcfdfd;
-	color: #222222;
+	color: #231F20;
 	line-height: 22px;
 	margin-left: 4px;
 	padding-left: 6px;
@@ -305,7 +305,7 @@ td.row_alt {
 	background: #ebecec;
 }
 td.row_over {
-	background: #bcd4ec;
+	background: #DFE1C9;
 	cursor: pointer;
 }
 
@@ -336,37 +336,38 @@ td.row_over {
 }
 .group_tab {
 	padding: 3px 3px 3px 10px;
-	border: 1px solid #D0E0EB;
-	background-color: #EBF7F8;
+	border: 1px solid #B0B579;
+	background-color: #E7E9D7;
 	font-weight: normal;
 	font-size: 10pt;
-	color: #555555;
+	color: #231F20;
 	outline: none;
 	cursor: pointer;
 	border-bottom-right-radius: 6px;
 	border-top-right-radius: 6px;
+	margin-top: -1px;
 }
 .group_tab_selected {
-	background-color: #e3e3e3;
+	background-color: #C8CBA1;
 	border: none;
 	font-weight: normal;
-	color: #212121;
+	color: #231F20;
 	outline: none;
 }
 .group_tab li:hover {
 	border: 1px solid #999999;
 	background-color: #dadada;
 	font-weight: normal;
-	color: #212121;
+	color: #231F20;
 	outline: none;
 }
 .group_header {
 	padding: 3px;
-	border: 1px solid #a3a3a3;
-	background-color: #D0E0EB;
+	border: 1px solid #949B50;
+	background-color: #949B50;
 	font-weight: bold;
 	font-size: 10pt;
-	color: #49708A;
+	color: #231F20;
 	outline: none;
 	border-bottom-right-radius: 6px;
 	border-top-right-radius: 6px;
