UI - fixed info icon, made consistent across all pages.

--- a/ui/admin/templates/deploymentManage.html
+++ b/ui/admin/templates/deploymentManage.html
@@ -24,7 +24,7 @@ $var cssfiles:
                     Deployments cannot be deleted if they are referenced by any Services.
                 </p>
                 <p>
-                    <a href="http://docs.cloudsidekick.com/docs/maestro/deployments/deployment-basics.html" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+                    <a href="http://docs.cloudsidekick.com/docs/maestro/deployments/deployment-basics.html" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
                     for a more detailed introduction to Deployments.
                 </p>
             </div>
