--- a/ui/admin/templates/cloudEdit.html
+++ b/ui/admin/templates/cloudEdit.html
@@ -43,7 +43,7 @@ $var cssfiles:
 					<i>Clouds should have a 'default' Account selected.</i>
 				</p>
 				<p>
-					<a href="http://docs.cloudsidekick.com/docs/cato/cloud/cloud-endpoint.html" target="_blank"><img src="static/images/icons/info.png" alt="" />Click here</a>
+					<a href="http://docs.cloudsidekick.com/docs/cato/cloud/cloud-endpoint.html" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
 					for a more detailed introduction on Clouds.
 				</p>
 			</div>
