UI - removed non-working "New Deployment" button from template edit page

--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -31,8 +31,8 @@ $var cssfiles: taskEdit.css taskView.css ../../cache/js/jquery/jsoneditor/jsoned
         </div>
         <div id="div_deployments" class="ui-widget-content ui-corner-top toolbox_panel hidden">
             <div style="padding: 0 0 0 5px;">
-                <span id="deployment_create_btn">New Deployment</span>
-                <hr />
+                <!--<span id="deployment_create_btn">New Deployment</span>
+                <hr />-->
                 <div id="deployment_results"></div>
             </div>
         </div>
