--- a/ui/admin/templates/depTemplateManage.html
+++ b/ui/admin/templates/depTemplateManage.html
@@ -24,6 +24,10 @@ $var cssfiles:
                 <p>
                     Templates cannot be deleted if they are referenced by any Deployed Application.
                 </p>
+                <p>
+                    <a href="http://docs.cloudsidekick.com/docs/maestro/application-templates/editing.html" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
+                    for a more detailed introduction to Application Templates.
+                </p>
             </div>
         </div>
     </div>
