--- a/ui/admin/templates/deploymentManage.html
+++ b/ui/admin/templates/deploymentManage.html
@@ -12,16 +12,16 @@ $var cssfiles:
         <img src="static/images/icons/deployments_128.png" alt="" />
         <div id="left_tooltip_box_outer">
             <div id="left_tooltip_box_inner">
-                <h2>Deployments</h2>
+                <h2>Deployed Applications</h2>
                 <p>
-                    The Manage Deployments screen allows Administrators to modify and delete Deployed Applications.
+                    The Deployed Applications screen allows Administrators to modify and delete Deployed Applications.
                 </p>
                 <p>
-                    Select one or more Deployments from the list to the right, using the checkboxes. Select
-                    an action to modify or delete the Deployments you've selected.
+                    Select one or more Applications from the list to the right, using the checkboxes. Select
+                    an action to modify or delete the Applications you've selected.
                 </p>
                 <p>
-                    Deployments cannot be deleted if they are referenced by any Services.
+                    Applications cannot be deleted if they have any running Services.
                 </p>
                 <p>
                     <a href="http://docs.cloudsidekick.com/docs/maestro/deployments/deployment-basics.html" target="_blank"><span class="ui-icon ui-icon-info forceinline"></span>Click here</a>
