--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -26,7 +26,7 @@ $def with (content)
         <link type="text/css" href="/common/css/ui.tabs.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/superfish/superfish.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
-        <link type="text/css" href="/cache/css/jquery.meow.css" rel="stylesheet" />
+        <link type="text/css" href="/common/vendor/css/jquery.meow.css" rel="stylesheet" />
 
         <!--Any .css files defined on the content page.-->
         $if content.cssfiles:
@@ -34,22 +34,22 @@ $def with (content)
                 <link type="text/css" href="static/style/$f" rel="stylesheet" />
 
         <!--jQuery -->
-        <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
-        <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-1.10.2.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-ui-1.10.3.min.js"></script>
         <!-- Plugins -->
-        <script src="/cache/js/jquery/jquery.blockUI.js"></script>
-        <script src="/cache/js/jquery/jquery.textarea.js"></script>
-        <script src="/cache/js/jquery/jquery.timers.js"></script>
-        <script src="/cache/js/jquery/superfish/hoverIntent.js"></script>
-        <script src="/cache/js/jquery/superfish/superfish.js"></script>
-        <script src="/cache/js/jquery/superfish/supersubs.js"></script>
-        <script src="/cache/js/jquery/jquery.scrollTo.js"></script>
-        <script src="/cache/js/jquery/jquery.tipTip.js"></script>
-        <script src="/cache/js/jquery/jquery.timepicker.js"></script>
-        <script src="/cache/js/jquery/jquery.base64.js"></script>
-        <script src="/cache/js/jquery/jquery.cookie.js"></script>
-        <script src="/cache/js/jquery/jquery.sortElements.js"></script>
-        <script src="/cache/js/jquery/jquery.meow.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.blockUI.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.textarea.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.timers.js"></script>
+        <script src="/common/vendor/js/jquery/superfish/hoverIntent.js"></script>
+        <script src="/common/vendor/js/jquery/superfish/superfish.js"></script>
+        <script src="/common/vendor/js/jquery/superfish/supersubs.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.scrollTo.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.tipTip.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.timepicker.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.base64.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.cookie.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.sortElements.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.meow.js"></script>
         <!-- JavaScript -->
         <script src="/common/js/url.js"></script>
         <script src="/common/js/alert.js"></script>
