--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -24,15 +24,15 @@ $def with (content)
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
         <!--jQuery -->
-        <script src="/cache/js/jquery/jquery-1.10.2.min.js"></script>
-        <script src="/cache/js/jquery/jquery-ui-1.10.3.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-1.10.2.min.js"></script>
+        <script src="/common/vendor/js/jquery/jquery-ui-1.10.3.min.js"></script>
         <!-- Plugins -->
-        <script src="/cache/js/jquery/jquery.blockUI.js"></script>
-        <script src="/cache/js/jquery/jquery.textarea.js"></script>
-        <script src="/cache/js/jquery/jquery.scrollTo.js"></script>
-        <script src="/cache/js/jquery/jquery.tipTip.js"></script>
-        <script src="/cache/js/jquery/jquery.timepicker.js"></script>
-        <script src="/cache/js/jquery/jquery.base64.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.blockUI.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.textarea.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.scrollTo.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.tipTip.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.timepicker.js"></script>
+        <script src="/common/vendor/js/jquery/jquery.base64.js"></script>
         <!-- JavaScript -->
         <script src="static/script/masterpage.js"></script>
         <script src="/common/js/url.js"></script>
