Fixes #341 - hide 'test' button for non-AWS clouds

--- a/ui/admin/templates/cloudEdit.html
+++ b/ui/admin/templates/cloudEdit.html
@@ -115,7 +115,7 @@ $var cssfiles:
 				</tr>
 				<tr>
 					<td> Default Account: </td>
-					<td><select id="ddlDefaultAccount"></select><span id="jumpto_account_btn" title="Edit Account">&nbsp;</span><span class="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_account_btn" title="Add an Account">&nbsp;</span></td>
+					<td><select id="ddlDefaultAccount"></select><span id="jumpto_account_btn" title="Edit Account">&nbsp;</span><span id="test_connection_btn" title="Test Connection">&nbsp;</span><span id="add_account_btn" title="Add an Account">&nbsp;</span></td>
 				</tr>
 				<tr>
 					<td colspan="2">
