changed app title

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -19,7 +19,7 @@ $def with (content)
 <html>
     <head id="Head1">
         <meta charset=utf-8 />
-        <title>veloAutomate</title>
+        <title>automate - velocity</title>
         <link rel="shorcut icon" href="static/images/favicon.ico" />
         <!-- Imp CSS -->
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
