--- a/ui/admin/templates/home.html
+++ b/ui/admin/templates/home.html
@@ -13,7 +13,7 @@ $var cssfiles:
 <div id="fullwidthcontent">
 	<div id="pnlGettingStarted">
 		<div id="getting_started" class="ui-widget-content ui-corner-all" style="box-shadow: 2px 2px 5px #555;">
-			<h1 style="text-align: center;">Welcome to Cloud Sidekick Cato!</h1>
+			<h1 style="text-align: center;">Welcome to velocity automate!</h1>
 			<p id="getting_started_message" class="hidden" style="text-align: center;">
 				There are just a few more things you need to do to get started.
 			</p>
