--- a/ui/admin/templates/popup.html
+++ b/ui/admin/templates/popup.html
@@ -19,7 +19,7 @@ $def with (content)
 <html>
     <head id="Head1">
         <meta charset=utf-8 />
-        <title>Cato - Cloud Sidekick</title>
+        <title>automate</title>
         <link rel="icon" href="static/images/favicon.ico" />
         <link type="text/css" href="static/style/main.css" rel="stylesheet" />
         <link type="text/css" href="/common/css/tipTip.css" rel="stylesheet" />
