Renaming - Cato to 'automate' where appropriate

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -72,7 +72,7 @@ $def with (content)
                 &copy; 2014 Cloud Sidekick
             </div>
 
-            <div class="floatright" style="margin-right: 10px; cursor: pointer;" title="About Cato">
+            <div class="floatright" style="margin-right: 10px; cursor: pointer;" title="About automate">
                 <span id="about_btn" class="ui-icon ui-icon-info pointer"></span>
             </div>
             <div class="floatright" style="margin-right: 10px; margin-top: -6px;">
@@ -98,10 +98,10 @@ $:content
             <br />
             <!-- dynamic divs below here -->
             <!-- This is the popup "about" dialog. -->
-            <div id="about_dialog" title="About Cato">
+            <div id="about_dialog" title="About automate">
                 <p>
                     <span class="ui-icon ui-icon-info" style="float: left; margin: 0 7px 0px 0;"></span>
-                    <span id="app_name">Cloud Sidekick Cato</span>
+                    <span id="app_name"><b>velocity automate</b></span>
                     <br />
                     <br />
                     <b>On the Web: </b><span id="app_web">http://www.cloudsidekick.com</span>
