--- a/ui/admin/templates/taskManage.html
+++ b/ui/admin/templates/taskManage.html
@@ -81,7 +81,7 @@ $var cssfiles:
 	</table>
 </div>
 <div id="delete_dialog" class="hidden" title="Delete Tasks">
-	Cato Tasks may be referenced by other Cloud Sidekick applications.  Deleting Tasks could have impact in those applications that cannot be determined from here.
+	Tasks may be referenced by other Cloud Sidekick applications.  Deleting Tasks could have impact in those applications that cannot be determined from here.
 	<hr />
 	<p style="font-style: italic; padding: 2px;" class="ui-state-highlight">
 		Some of the selected Tasks may have have external references and/or historical information.  Would you like to delete these Tasks anyway?
