--- a/ui/admin/templates/credentialEdit.html
+++ b/ui/admin/templates/credentialEdit.html
@@ -17,7 +17,7 @@ $var cssfiles:
                 <h2>Shared Credentials</h2>
                 <p>
                     The Manage Shared Credentials screen
-                    allows administrators to modify, add and delete credentials available throughout Cato and other tools.
+                    allows administrators to modify, add and delete credentials available throughout the velocity platform.
                 </p>
                 <p>
                     Select a Credential from the list to modify it.  Using the checkboxes,
