renamed some labels on the settings page

--- a/ui/admin/templates/settings.html
+++ b/ui/admin/templates/settings.html
@@ -294,7 +294,7 @@ $var cssfiles:
         <div id="div_maestro_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Maestro General</span>
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>velocity deploy</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -324,7 +324,7 @@ $var cssfiles:
         <div id="div_marshaller_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Marshaller</span>
+                    <img src="static/images/icons/config_24.png" alt="" style="vertical-align: middle;"/><span>deploy Marshaller</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -358,7 +358,7 @@ $var cssfiles:
         <div id="div_maestroscheduler_detail" class="detail_panel hidden">
             <div class="ui-widget-content ui-corner-all">
                 <div class="ui-widget-header">
-                    <img src="static/images/icons/sched_24.png" alt="" style="vertical-align: middle;"/><span>Maestro Scheduler</span>
+                    <img src="static/images/icons/sched_24.png" alt="" style="vertical-align: middle;"/><span>deploy Scheduler</span>
                 </div>
                 <table width="100%">
                     <tr>
@@ -416,13 +416,13 @@ $var cssfiles:
                 Messenger
             </li>
             <li class="group_tab" id="maestro">
-                Maestro General
+                deploy General
             </li>
             <li class="group_tab" id="maestroscheduler">
-                Maestro Scheduler
+                deploy Scheduler
             </li>
             <li class="group_tab" id="marshaller">
-                Maestro Marshaller
+                deploy Marshaller
             </li>
         </ul>
     </div>
